--- a/src/main/resources/templates/deliveryStaffApplication/deliveryStaffApplication-management-form.html
+++ b/src/main/resources/templates/deliveryStaffApplication/deliveryStaffApplication-management-form.html
@@ -9,8 +9,8 @@
 
 </style>
 <script>
-<!--    common function-->
-    function checkedStatementIdList(){
+    <!--    common function-->
+    function checkedStatementIdList() {
         let $checked = $('.checkbox-input:checked');
         let statementIdList = [];
         for (let i = 0; i < $checked.length; i++) {
@@ -24,13 +24,13 @@
 <th:block th:replace="common/fragments/left-navbar" :: LeftNavbarFragment></th:block>
 <th:block th:replace="common/fragments/header-fragment" :: headerFragment></th:block>
 <div class="content-area">
-    <h2>배송기사 관리</h2>
+    <h2>배송기사 Test-App</h2>
     <hr>
-        <div style="margin-top : 20px;">
+    <div style="margin-top : 20px;">
         <div class="input-group" style="width : 25%; margin-right: 4%; float: left;">
-<!--            <span class="input-group-text">모델코드</span>-->
-<!--            <input name="modelCord" type="text" class="form-control">-->
-            <select name="tc" class="form-select">
+            <!--            <span class="input-group-text">모델코드</span>-->
+            <!--            <input name="modelCord" type="text" class="form-control">-->
+            <select onchange="staffNameList()" name="tc" class="form-select">
                 <option value="0" selected>TC</option>
                 <option th:each="tc : ${tcList}"
                         th:value="${tc.tc}"
@@ -39,54 +39,58 @@
             </select>
         </div>
         <div class="input-group" style="width : 25%; margin-right: 4%; float: left;">
-            <span class="input-group-text">기사명</span>
-            <input name="staffName" type="text" class="form-control">
+            <!--            <span class="input-group-text">모델코드</span>-->
+            <!--            <input name="modelCord" type="text" class="form-control">-->
+            <select name="staffName" class="form-select" onchange="staffNameList()">
+            </select>
         </div>
-        <div class="input-group" style="width : 25%; margin-right: 4%; float: left;">
-            <span class="input-group-text">연락처</span>
-            <input name="staffPhoneNum" type="text" class="form-control">
-        </div>
-<!--        <button style="width : 13%;" onclick="searchOrder()" class="btn btn-primary">검색</button>-->
-        <button style="width : 13%;" onclick="registrationDeliveryStaff()" class="btn btn-primary">저장</button>
-            <script>
-                const registrationDeliveryStaff=()=>{
-                    const tc = $('select[name="tc"]').val();
-                    const staffName = $('input[name="staffName"]').val();
-                    const staffPhoneNum =  $('input[name="staffPhoneNum"]').val();
-                    const params = JSON.stringify({
-                        tc : tc,
-                        staffName : staffName,
-                        staffPhoneNum : staffPhoneNum
-                    })
-                    if(tc === '0'){
-                        alert('TC를 선택하세요')
-                        return
-                    }
-                    if(staffName === ''){
-                        alert('기사명을 입력하세요')
-                        return
-                    }
-                    if(staffPhoneNum === ''){
-                        alert('연락처를 입력하세요')
-                        return
-                    }
-                    $.ajax({
-                        url : '/deliveryStaff/registration',
-                        type : 'post',
-                        data : params,
-                        dataType : 'json',
-                        contentType: 'application/json',
-                        success : (result)=>{
-                            if(result.errorCode === '0000'){
-                                alert('등록완료');
-                                location.reload();
-                            }
-                        },
-                        error : (err)=>console.log(err)
-                    })
+        <!--        <div class="input-group" style="width : 54%; margin-right: 4%; float: left;">-->
+        <!--            <span class="input-group-text">기사명</span>-->
+        <!--            <input name="staffName" type="text" class="form-control">-->
+        <!--        </div>-->
 
-                }
-            </script>
+        <!--        <button style="width : 13%;" onclick="searchOrder()" class="btn btn-primary">검색</button>-->
+        <button style="width : 13%;" onclick="searchDelivery()" class="btn btn-primary">검색</button>
+        <script>
+            const staffNameList = () => {
+                const tc = $('select[name="tc"]').val();
+                $.ajax({
+                    url: `/api/deliveryStaff/list?tc=${tc}`,
+                    type: 'get',
+                    success: function (result) {
+                        console.log(result);
+                        let txt = '';
+                        if (result.result.length === 0) {
+                            txt = '없음';
+                        } else {
+                            result.result.forEach((item, idx) => {
+                                txt += `<option value="${item.id}">${item.staffName}</option>`;
+                            })
+                        }
+                        $('select[name="staffName"]').empty().append(txt);
+                    },
+                    error: function (err) {
+                        console.log(err);
+                    }
+                })
+            }
+            const selectDeliveryInfoListByStaffId = () => {
+                const tc = $('select[name="tc"]').val();
+                const staffName = $('select[name="staffName"]').val();
+                $.ajax({
+                    url: '/api/delivery/list/forStaff',
+                    type: 'get',
+                    dataType: 'json',
+                    success: function (result) {
+                        console.log(result);
+                    },
+                    error: function (err) {
+                        console.log(err)
+                    }
+                })
+            }
+
+        </script>
     </div>
     <div style="margin-top : 50px;">
         <style>
@@ -119,46 +123,16 @@
             <table class="table">
                 <thead>
                 <tr>
-<!--                    <th><input id="all-check" class="form-check-input" type="checkbox"></th>-->
-                    <th>ID</th>
-                    <script>
-                        $(document).ready(function () {
-                            $('#all-check').click(function(){
-                                if ($(this).is(':checked')) {
-                                    $('.checkbox-input').attr('checked', true);
-                                } else {
-                                    $('.checkbox-input').attr('checked', false);
-                                }
-                            });
-                            $('#all-check').change(function(){
-                                if ($(this).is(':checked')) {
-                                    $('.checkbox-input').prop('checked', true);
-                                } else {
-                                    $('.checkbox-input').prop('checked', false);
-                                }
-                            })
-                        })
-                    </script>
-                    <th>TC</th>
-                    <th>배송지역</th>
-                    <th>기사명</th>
-                    <th>연락처</th>
-                    <th>금일배송</th>
-                    <th>익일배송</th>
-                    <th>상태</th>
+                    <!--                    <th><input id="all-check" class="form-check-input" type="checkbox"></th>-->
+                    <th>납품번호</th>
+                    <th>고객명</th>
+                    <th>배송요청일</th>
+                    <th>배송완료일</th>
+                    <th>배송상태</th>
+                    <th>수정</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="deliveryStaff : ${deliveryStaffList}">
-                    <td th:text="${deliveryStaff.id}"></td>
-                    <td th:text="${deliveryStaff.tc}"></td>
-                    <td th:text="${deliveryStaff.deliveryArea}"></td>
-                    <td th:text="${deliveryStaff.staffName}"></td>
-                    <td th:text="${deliveryStaff.staffPhoneNum}"></td>
-                    <td><a href="#">0</a></td>
-                    <td><a href="#">0</a></td>
-                    <td th:text="${deliveryStaff.state}"></td>
-                </tr>
                 </tbody>
             </table>
 
@@ -170,32 +144,30 @@
 </body>
 <script>
 
-    const searchOrder = () => {
-        let tc = $('select[name="tc"]').val();
-        let staffName = $('input[name="staffName"]').val();
-        let staffPhoneNum = $('input[name="staffPhoneNum"]').val();
-        const params = {
-            tc: tc,
-            staffName: staffName,
-            staffPhoneNum: staffPhoneNum,
-        }
+    const searchDelivery = () => {
+
+        let staffId = $('select[name="staffName"]').val();
+        // const params = {
+        //     staffId: staffName,
+        // }
 
         $.ajax({
-            type: 'post',
-            url: '/api/deliveryStaff/list',
+            type: 'GET',
+            url: '/api/delivery/list?staffId='+staffId,
             dataType: 'json',
-            contentType: 'application/json',
-            data: JSON.stringify(params),
+            // contentType: 'application/json',
+            // data: JSON.stringify(params),
             success: (result) => {
                 console.log(result);
                 let txt = '';
                 result.result.forEach((item, idx) => {
-
                     txt += `<tr>`;
-                    txt += `<td>${item.tc}</td>`
-                    txt += `<td>${item.deliveryArea}</td>`;
-                    txt += `<td>${item.staffName}</td>`;
-                    txt += `<td>${item.staffPhoneNum}</td>`;
+                    txt += `<td><a href="/api/delivery/info?deliveryId=${item.deliveryId}">${item.deliveryId}</a></td>`
+                    txt += `<td>${item.customerName}</td>`;
+                    txt += `<td>${item.expectedDeliveryDt}</td>`;
+                    txt += `<td>${item.deliveryCompletionDt}</td>`;
+                    txt += `<td>${deliveryState(item.deliveryId,item.deliveryState)}</td>`;
+                    txt += `<td><button onclick="updateDeliveryState(${item.deliveryId})" class="btn btn-primary">수정</button><td>`;
                     txt += `</tr>`;
                 })
                 $('tbody').empty().append(txt);
@@ -205,6 +177,42 @@
         })
     }
 
+    const deliveryState =(deliveryId,state)=>{
+        console.log(deliveryId,state);
+        let txt = '';
+        txt += `<select class="form-select ${deliveryId}" style="width : 120px;">`;
+        txt += `<option ${state === '배송준비' ? 'selected' : ''} value="1">배송준비</option>`;
+        txt += `<option ${state === '출고'    ? 'selected' : ''} value="2">출고</option>`;
+        txt += `<option ${state === '배송완료' ? 'selected' : ''} value="3">배송완료</option>`;
+        txt += `<option ${state === '연기'    ? 'selected' : ''} value="4">연기</option>`;
+        txt += `<option ${state === '반품'    ? 'selected' : ''} value="5">반품</option>`;
+        txt += `</select>`;
+        return txt;
+    }
+    const updateDeliveryState =(deliveryId)=>{
+        const $deliveryState = $('select.'+deliveryId);
+        const deliveryStateUpdateParam = {
+            deliveryId : deliveryId,
+            reqState : $deliveryState.val(),
+        }
+        console.log(deliveryStateUpdateParam);
+        // return
+        $.ajax({
+            type : 'POST',
+            url : '/api/update/delivery/state',
+            data : JSON.stringify(deliveryStateUpdateParam),
+            dataType : 'json',
+            contentType : 'application/json',
+            success : (result)=>{
+                console.log(result);
+                searchDelivery();
+            },
+            error : (err)=>{console.log(err);}
+
+        })
+
+
+    }
 
 </script>
 
