매출조회 기능만드는중

--- a/src/main/resources/templates/salesInfo/sales-management-form.html
+++ b/src/main/resources/templates/salesInfo/sales-management-form.html
@@ -6,13 +6,13 @@
 
 <body>
 <style>
-    .delete{
+    .delete {
         color: red;
     }
 </style>
 <script>
-<!--    common function-->
-    function checkedStatementIdList(){
+    <!--    common function-->
+    function checkedStatementIdList() {
         let $checked = $('.checkbox-input:checked');
         let statementIdList = [];
         for (let i = 0; i < $checked.length; i++) {
@@ -28,61 +28,68 @@
 <div class="content-area">
     <h2>매출조회</h2>
     <hr>
-
-        <style>
-            .container-table {
-                min-width: 1000px; /* 원하는 너비 */
-                min-height: 200px; /* 원하는 높이 */
-                overflow-x: auto; /* 스크롤바 표시 */
-            }
-
-            table {
-                width: 3000px;
-                /*width: 100%; !* 부모 컨테이너에 맞게 테이블 너비 조정 *!*/
-            }
-
-            td, th {
-                white-space: nowrap; /* 줄 바꿈 방지 */
-            }
-
-            th {
-                z-index: 1;
-            }
-
-            thead {
-                position: sticky;
-                top: 0;
-                background-color: white;
-            }
-        </style>
-
-        <div class="container-table">
-
-            <table class="table">
-                <thead>
-                <tr>
-<!--                    <th><input id="all-check" class="form-check-input" type="checkbox"></th>-->
-
-                    <th>주문번호</th>
-                    <th>납품번호</th>
-                    <th>고객명</th>
-                    <th>모델명</th>
-                    <th>수량</th>
-                    <th>TC</th>
-<!--                    <th>출고일</th>-->
-                    <th>배송예정일</th>
-                    <th>배송완료일</th>
-                    <th aria-description="출고,반품,배송완료">배송상태</th>
-                    <th>기사명</th>
-                    <th>기사연락처</th>
-                </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-
+    <div>
+        <div class="input-group">
+            <span class="input-group-text"></span>
+            <input type="date" aria-label="Last name" class="form-control">
+        </div>
+        <div>
+            <span class="input-group-text"></span>
+            <input type="date" aria-label="Last name" class="form-control">
         </div>
     </div>
 
+    <style>
+        .container-table {
+            min-width: 1000px; /* 원하는 너비 */
+            min-height: 200px; /* 원하는 높이 */
+            overflow-x: auto; /* 스크롤바 표시 */
+        }
+
+        table {
+            width: 3000px;
+            /*width: 100%; !* 부모 컨테이너에 맞게 테이블 너비 조정 *!*/
+        }
+
+        td, th {
+            white-space: nowrap; /* 줄 바꿈 방지 */
+        }
+
+        th {
+            z-index: 1;
+        }
+
+        thead {
+            position: sticky;
+            top: 0;
+            background-color: white;
+        }
+    </style>
+
+    <div class="container-table">
+
+        <table class="table">
+            <thead>
+            <tr>
+                <!--                    <th><input id="all-check" class="form-check-input" type="checkbox"></th>-->
+
+                <th>주문번호</th>
+                <th>납품번호</th>
+                <th>고객명</th>
+                <th>모델명</th>
+                <th>수량</th>
+                <th>TC</th>
+                <!--                    <th>출고일</th>-->
+                <th>배송예정일</th>
+                <th>배송완료일</th>
+                <th aria-description="출고,반품,배송완료">배송상태</th>
+                <th>기사명</th>
+                <th>기사연락처</th>
+            </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 </div>
 
 </body>
@@ -99,7 +106,7 @@
         // let deliveryId = $('input[name="sear"]')
         const params = {
             vendorId: vendorId,
-            deliveryId : searchContent,
+            deliveryId: searchContent,
             searchContent: searchContent,
             expectedDeliveryDt_start: deliveryExpectedDtFirst,
             expectedDeliveryDt_end: deliveryExpectedDtSecond,
