--- a/src/main/resources/templates/salesInfo/sales-management-form.html
+++ b/src/main/resources/templates/salesInfo/sales-management-form.html
@@ -29,16 +29,33 @@
     <h2>매출조회</h2>
     <hr>
     <div>
-        <div class="input-group">
-            <span class="input-group-text"></span>
-            <input type="date" aria-label="Last name" class="form-control">
+        <div style="float : left; width : 25%; margin-right: 5%;">
+            <select
+                    name="vendorId" class="form-select" id=""
+                    aria-label="Example select with button addon">
+                <option value="0" selected>거래선*</option>
+                <option th:each="vendor : ${vendorList}" th:value="${vendor.id}"
+                        th:text="${vendor.vendorName}"></option>
+            </select>
         </div>
-        <div>
-            <span class="input-group-text"></span>
-            <input type="date" aria-label="Last name" class="form-control">
+        <div class="input-group" style="float : left; width : 35%; margin-right: 5%;">
+            <span class="input-group-text">매출생성일</span>
+            <input name="salesCreateStartDt" max="9999-12-31" type="date" class="form-control">
+            <input name="salesCreateEndDt" max="9999-12-31" type="date" class="form-control">
+            <script>
+                $('input[type="date"]')[0].valueAsDate = new Date();
+                $('input[type="date"]')[1].valueAsDate = new Date();
+            </script>
+        </div>
+        <div style="float : left; width : 25%; margin-right: 5%;" class="input-group">
+            <button style="width : 50%;" onclick="searchSalesInfo()" class="btn btn-primary">검색</button>
         </div>
     </div>
-
+    <div>
+        <input type="text" id="supplyPrice" disabled/>
+        <input type="text" id="supplyPriceVat" disabled/>
+        <input type="text" id="totalPrice" disabled/>
+    </div>
     <style>
         .container-table {
             min-width: 1000px; /* 원하는 너비 */
@@ -72,19 +89,22 @@
             <thead>
             <tr>
                 <!--                    <th><input id="all-check" class="form-check-input" type="checkbox"></th>-->
-
-                <th>주문번호</th>
+                <th>매출번호</th>
                 <th>납품번호</th>
-                <th>고객명</th>
-                <th>모델명</th>
-                <th>수량</th>
-                <th>TC</th>
-                <!--                    <th>출고일</th>-->
-                <th>배송예정일</th>
+                <th>주문번호</th>
+                <th>전표번호</th>
+                <th>순서</th>
+                <th>거래선</th>
+                <th>판매번호</th>
+                <th>주문생성일</th>
                 <th>배송완료일</th>
-                <th aria-description="출고,반품,배송완료">배송상태</th>
-                <th>기사명</th>
-                <th>기사연락처</th>
+                <th>매출완료일</th>
+                <th>고객명</th>
+                <th>상품코드</th>
+                <th>모델코드</th>
+                <th>수량</th>
+                <th>공급가</th>
+                <th>부가세</th>
             </tr>
             </thead>
             <tbody></tbody>
@@ -95,74 +115,49 @@
 </body>
 <script>
 
-    const searchDelivery = () => {
+    const searchSalesInfo = () => {
         let vendorId = $('select[name="vendorId"]').val();
-        let searchContent = $('input[name="searchContent"]').val();
-        let deliveryExpectedDtFirst = $('input[name="deliveryExpectedDtFirst"]').val();
-        let deliveryExpectedDtSecond = $('input[name="deliveryExpectedDtSecond"]').val();
-        let deliveryStaffName = $('input[name="deliveryStaffName"]').val();
-        let modelCord = $('input[name="modelCord"]').val();
-        let customerName = $('input[name="customerName"]').val();
-        // let deliveryId = $('input[name="sear"]')
-        const params = {
-            vendorId: vendorId,
-            deliveryId: searchContent,
-            searchContent: searchContent,
-            expectedDeliveryDt_start: deliveryExpectedDtFirst,
-            expectedDeliveryDt_end: deliveryExpectedDtSecond,
-            deliveryStaffName: deliveryStaffName,
-            modelCord: modelCord,
-            customerName: customerName
-        }
-        console.log(params);
-        if (vendorId === '0') {
-            alert('거래선을 선택하세요');
-            return;
-        }
+        let salesCreateStartDt = $('input[name="salesCreateStartDt"]').val();
+        let salesCreateEndDt = $('input[name="salesCreateEndDt"]').val();
 
         $.ajax({
-            type: 'POST',
-            url: '/api/delivery/list/search',
+            type: 'GET',
+            url: `/api/salesInfo?vendorId=${vendorId}&startDt=${salesCreateStartDt}&endDt=${salesCreateEndDt}`,
             dataType: 'json',
-            contentType: 'application/json',
-            data: JSON.stringify(params),
             success: (result) => {
                 console.log(result);
                 let txt = 'test';
+                let totalSupplyPrice = 0;
+                let totalSupplyPriceVat = 0;
                 result.result.forEach((item, idx) => {
-
-                    let productCordList = item.productList;
-                    let productCordSize = productCordList.length;
-                    let modelCordTxt = '';
-                    let productCordTxt = '';
-                    let quantity = '';
-                    let price = '';
-                    productCordList.forEach((productCord, seq) => {
-                        modelCordTxt += `<div>${productCord.modelCord}</div>`;
-                        productCordTxt += `<div>${productCord.productCord}</div>`;
-                        quantity += `<div>${productCord.orderQuantity}</div>`;
-                        price += `<div>${productCord.supplyPrice}</div>`;
-                    })
+                    let supplyPrice = item.orderQuantity * item.supplyPrice;
+                    let supplyPriceVat = item.orderQuantity * item.supplyPriceVat;
+                    totalSupplyPrice += supplyPrice;
+                    totalSupplyPriceVat += supplyPriceVat;
                     //
                     txt += `<tr>`;
-                    //txt += `<!--<td><input value="${item.del}" name="check-statement" class="form-check-input checkbox-input" type="checkbox"/></td>-->`
-                    txt += `<td>${item.orderId}</td>`;
                     txt += `<td>${item.id}</td>`;
+                    txt += `<td>${item.deliveryId}</td>`;
+                    txt += `<td>${item.orderId}</td>`;
+                    txt += `<td>${item.statementId}</td>`;
+                    txt += `<td>${item.orderSeq}</td>`;
+                    txt += `<td>${item.vendorName}</td>`;
+                    txt += `<td>${item.salesNo}</td>`;
+                    txt += `<td>${item.orderRegDt}</td>`;
+                    txt += `<td>${item.deliveryCompletionDt}</td>`;
+                    txt += `<td>${item.salesRegDt}</td>`;
                     txt += `<td>${item.customerName}</td>`;
-                    // txt += `<td>${productCordTxt}</td>`;
-                    txt += `<td>${modelCordTxt}</td>`;
-                    txt += `<td>${quantity}</td>`;
-                    //txt += `<td>${price}</td>`;
-                    txt += `<td>${item.tc}</td>`;
-                    txt += `<td>${item.expectedDeliveryDt}</td>`;
-                    txt += `<td>${item.deliveryCompletionDt === null ? '' : item.deliveryCompletionDt}</td>`;
-                    txt += `<td>${item.deliveryState}</td>`;
-                    txt += `<td>${item.staffName}</td>`;
-                    txt += `<td>${item.staffPhoneNum}</td>`;
+                    txt += `<td>${item.productCord}</td>`;
+                    txt += `<td>${item.modelCord}</td>`;
+                    txt += `<td>${item.orderQuantity}</td>`;
+                    txt += `<td>${supplyPrice}</td>`;
+                    txt += `<td>${supplyPriceVat}</td>`;
                     txt += `</tr>`;
                 })
                 $('tbody').empty().append(txt);
-
+                $('#supplyPrice').val(totalSupplyPrice);
+                $('#supplyPriceVat').val(totalSupplyPriceVat);
+                $('#totalPrice').val(totalSupplyPrice+totalSupplyPriceVat);
             },
             error: (err) => console.log
         })
