매출 batch 제작했으나, 제약조건 없어서 sales-data 중복발생

--- a/src/main/resources/templates/category/category-form.html
+++ b/src/main/resources/templates/category/category-form.html
@@ -39,7 +39,7 @@
         <tr th:each="category:${productCategoryList}">
             <td th:text="${category.id}"></td>
             <td th:text="${category.productCategory}"></td>
-            <td th:text="${category.memberId}"></td>
+            <td th:text="${category.name}"></td>
             <td th:text="${category.regDt}"></td>
         </tr>
     </tbody>
